# drake-trajopt

./: .gitignore  README.md  pyproject.toml
drake_trajopt/: all.py  config.py  drake_state.py  trajopt.py  utils.py
examples/: spot_and_toolbox.py
models/: package.xml
models/rby1/: cameras.scenario.yaml  model_drivers.scenario.yaml
models/rby1_description_drake/: add_rby1_grippers_planning.dmd.yaml  add_rby1_grippers_sim.dmd.yaml  add_rby1_planning.dmd.yaml  add_rby1_sim.dmd.yaml  add_rby1_sim_with_holonomic_base_actuators.dmd.yaml  add_rby1_torso_arms_head.dmd.yaml  base.urdf  base_holonomic_with_actuators.urdf  base_unactuated.urdf  gripper_planning.urdf  gripper_sim.urdf  head_with_mit_camera_mount.urdf  left_arm.urdf  right_arm.urdf  torso.urdf
models/scenarios/articulation/: demo.dmd.yaml
models/spot/: add_spot_with_arm_and_floating_base_actuators.dmd.yaml  spot_with_arm_and_floating_base_actuators.urdf
models/toolbox/: body.part  body.stl  config.json  convert_meshes.py  hinge_joiner_r.part  hinge_joiner_r.stl  hinge_r.part  hinge_r.stl  hydroelastic_contact_basics.ipynb  large_drawer.part  large_drawer.stl  large_drawer_pull.part  large_drawer_pull.stl  lid.part  lid.stl  lid_hinge_l.part  lid_hinge_l.stl  lid_joiner_l.part  lid_joiner_l.stl  lock.part  lock.stl  small_drawer.part  small_drawer.stl  small_drawer_pull.part  small_drawer_pull.stl  toolbox.urdf
