[project]
name = "drake-trajopt"
version = "0.1.0"
description = ""
authors = [
    {name = "Siddharth Ancha"},
]
dependencies = [
    # =========================================================================
    # drake dependencies
    # taken from https://github.com/RobotLocomotion/drake/blob/91e3dccea12c6b5fa73ec215d8af0ff4ee7f1876/setup/ubuntu/binary_distribution/packages-jammy.txt
    # =========================================================================
    "notebook>=6.5.3",
    "ipywidgets>=8.0.4",
    "lxml>=4.9.2",
    "matplotlib>=3.7.1",
    "munkres>=1.1.4",
    "numpy>=1.23.3,<2",
    "pillow>=9.4.0",
    "pydot>=1.4.2",
    "pygame>=2.3.0",
    "tornado>=6.2",
    "u-msgpack-python>=2.7.2",
    "pyyaml>=6.0",
    "zmq>=0.0.0",
    # =========================================================================
    # Main dependencies
    # =========================================================================
    "drake",
    "manipulation>=2024.12.30.post1",
]
requires-python = ">=3.10,<=3.12"
readme = "README.md"
license = {text = "MIT"}

###############################################################################

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
